--- a/Resources/admin/Modules/App_LocalResources/Export.ascx.nl-NL.resx
+++ b/Resources/admin/Modules/App_LocalResources/Export.ascx.nl-NL.resx
@@ -73,6 +73,6 @@
     <value>U moet een map en bestand opgeven voor export.</value>
   </data>
   <data name="Root.Text">
-    <value>Root</value>
+    <value>Hoofdmap</value>
   </data>
 </root>
